--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^4.13.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
-  "name": "primeraentregaproyectofinal",
+  "name": "almainciensosapi",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
